# trading-gpt

./: .env  .env.example  .gitignore  Cargo.toml  data.db-journal  dev.db-journal  diesel.toml  index.html  readme.MD
.github/workflows/: rust.yml
migrations/2023-07-15-021424_create_users/: up.sql
src/: frontend.rs  global.rs  lib.rs  schema.rs  sql.rs  trading_core.rs  types.rs  utils.rs
src/frontend/: app.rs  components.rs  server_liveview.rs  server_ssr.rs  style.css  types.rs  webpage.rs
src/trading_core/: behaviors.rs  gpt_bot.rs  sql.rs  types.rs
