[package]
name = "trading-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
