[package]
name = "trading-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-openai = "0.12.1"
axum = "0.6.18"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
dioxus = "0.3.2"
dioxus-liveview = { version = "0.3.0", features = ["axum"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
